bdr.BDR.scala.error
Erreur de compilation :
BDR:22: error: '(' expected but '{' found.
    } else if {fini=true}
              ^BDR:23: error: illegal start of simple expression
  } else {fini=true}
  ^